# vmfdown

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp  processor.cpp  processor.hpp
test/: _template.vmf  displacement.vmf  entity_io.vmf  escape_sequences.vmf
